updated organizer website

--- a/_data/2022/singapore/faculty.yml
+++ b/_data/2022/singapore/faculty.yml
@@ -11,4 +11,5 @@
 - name: Renwen Zhang
   image: /assets/images/renwen_zhang.png
   bio: "Renwen Zhang is an Assistant Professor at the Department of Communications and New Media at the National University of Singapore. Her research lies at the intersection of health communication, human-computer interaction, and interpersonal communication. She examines the design, use, and effects of digital technology for promoting wellbeing and mental health."  
+  website: https://renwenzhang.com/
 
