--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -51,6 +51,28 @@
     <br/> 
     Required Readings:
     
+    - [Can a 280-character message explain stock returns? Evidence from South Africa](https://doi.org/10.1108/MF-12-2021-0598)
+
+    - [Characterising Different Communities of Twitter Users: Migrants and Natives](https://doi.org/10.1007/978-3-030-93409-5_12)
+    
+    - [Systematic Delineation of Media Polarity on COVID-19 Vaccines in Africa: Computational Linguistic Modeling Study](https://doi.org/10.2196/22916)"
+    
+    - name: "**10:30-12:00** Can a 280-character message explain stock returns? *Evidence from South Africa*"
+    - name: "**12:00-13:00** Tutorials"
+    - name: "**13:00-14:00** Lunch"
+    - name: "**14:00-15:30** Invited Presentation"
+    - name: "**15:30-18:00** Group Exercises"
+    - name: "**18:00-** Dinner"
+    
+    
+- date: 2022-06-23
+  events:
+    - name: "**09:00-09:15** Housekeeping and Announcements."
+    - name: "**09:15-10:30** Happy Hour
+    <br/> 
+    <br/> 
+    Required Readings:
+    
     - [Using search queries to understand health information needs in Africa](https://ojs.aaai.org/index.php/ICWSM/article/view/3360)
 
     - [Searching for HIV and AIDS health information in South Africa, 2004-2019: Analysis of Google and Wikipedia search trends](https://doi.org/10.2196/29819)
@@ -63,26 +85,6 @@
     - name: "**14:00-15:30** Tutorials/Flash Talks"
     - name: "**15:30-18:00** Group Exercises"
     - name: "**18:00-** Dinner" 
-  
-
-- date: 2022-06-23
-  events:
-    - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-10:30** Happy Hour
-    <br/> 
-    <br/> 
-    Required Readings:
-    
-    - [Can a 280-character message explain stock returns? Evidence from South Africa](https://doi.org/10.1108/MF-12-2021-0598)
-
-    - [Characterising Different Communities of Twitter Users: Migrants and Natives](https://doi.org/10.1007/978-3-030-93409-5_12)"
-    
-    - name: "**10:30-12:00** Text Analysis"
-    - name: "**12:00-13:00** Tutorials"
-    - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Invited Presentation"
-    - name: "**15:30-18:00** Group Exercises"
-    - name: "**18:00-** Dinner"
 
 
 - date: 2022-06-24
