--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -101,7 +101,9 @@
     
     - [Using an Online Sample to Estimate the Size of an Offline Population](https://doi.org/10.1007/s13524-019-00840-z)
     
-    - [A scoping review on the use of machine learning in research on social determinants of health: Trends and research prospects](https://doi.org/10.1016/j.ssmph.2021.100836)"
+    - [A scoping review on the use of machine learning in research on social determinants of health: Trends and research prospects](https://doi.org/10.1016/j.ssmph.2021.100836)
+    
+    - [Predicting the vulnerability of women to intimate partner violence in South Africa: Evidence from tree-based machine learning techniques](https://journals.sagepub.com/doi/abs/10.1177/0886260520960110)"
      
     - name: "**10:30-12:00** Social Survey meets Online Survey || Machine Learning."
     - name: "**12:00-13:00** Tutorials"
