--- a/_data/2022/london/faculty.yml
+++ b/_data/2022/london/faculty.yml
@@ -6,10 +6,10 @@
 
 - name: Nicola Perra
   image: /assets/images/NicolaPerra.jpg
-  bio: "Nicola is an Associate Professor (Reader) in Network Science at the Business School of Greenwich University, London, UK. Nicola's research focuses on human dynamics, big-data analytics, network science, and mathematical/digital epidemiology. In particular, his interests lie on the characterization and modeling of dynamical processes unfolding on time-varying and multiplex networks, human adaptive behaviors, data-driven modeling of infectious diseases, and the study of Online/Offline Social Networks."
+  bio: "Nicola is an Associate Professor (Reader) in Mathematics at Queen Mary University of London, London, UK. Nicola's research focuses on human dynamics, big-data analytics, network science, and mathematical/digital epidemiology. In particular, his interests lie on the characterization and modeling of dynamical processes unfolding on time-varying and multiplex networks, human adaptive behaviors, data-driven modeling of infectious diseases, and the study of Online/Offline Social Networks."
   website: http://www.nicolaperra.com/
 
 - name: Michael Yeomans
   image: /assets/images/MikeYeomans.jpg
-  bio: "Mike is an Assistant Professor in Strategy and Organisational Behaviour at Imperial College Business School. In their research, Mike uses natural language processing to study decision-making in conversation. He completed his PhD at the University of Chicago and a post-doctoral fellowship at Harvard University."
+  bio: "Michael is an Assistant Professor in Strategy and Organisational Behaviour at Imperial College Business School. In their research, Mike uses natural language processing to study decision-making in conversation. He completed his PhD at the University of Chicago and a post-doctoral fellowship at Harvard University."
   website: https://www.mikeyeomans.info/
