cu-reading materials

--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -81,6 +81,8 @@
 
     - [Searching for HIV and AIDS health information in South Africa, 2004-2019: Analysis of Google and Wikipedia search trends](https://doi.org/10.2196/29819)
 
+    - [Population-scale dietary interests during the COVID-19 pandemic](https://doi.org/10.1038/s41467-022-28498-z)
+
     - [Google trends and water conservation awareness: the internet’s contribution in South Africa](https://doi.org/10.1080/03736245.2021.1901239)"
     
     - name: "**10:30-12:00** Introduction to Internet Search Data."
