--- a/_data/2020/tucson/participants.yml
+++ b/_data/2020/tucson/participants.yml
@@ -17,7 +17,7 @@
 
 - name: Aytalina Kulichkina
   image: /assets/images/aytalinakulchkina.jpg
-  bio: "Aytalina Kulichkina is a PhD student in Communication and a research associate at the Computational Communication Science Lab at the University of Vienna, Austria. Her research interests lie primarily in the area of political communication, media effects, and public opinion, with a focus on computational research methods. Her doctoral project examines the micro-macro dynamics of political protest influenced by social media use and the long-term development of media attention to particular protest movements manifested in issue-attention cycles."
+  bio: "Aytalina Kulichkina is a PhD student in Communication and a research associate at the Computational Communication Science Lab at the University of Vienna, Austria. Her research interests lie primarily in the area of computational communication science methods with a focus on agent-based modeling and network analysis."
   website: https://compcommlab.univie.ac.at/team/aytalina-kulichkina/
 
 - name: Azade Esther Kakavand
