--- a/_data/2022/hong-kong/speakers.yml
+++ b/_data/2022/hong-kong/speakers.yml
@@ -36,5 +36,5 @@
 
 - name: Zachary C. Steinert-Threlkeld
   image: /assets/images/Steinert-Threlkeld.jpeg
-  bio: "Zachary C. Steinert-Threlkeld is an assistant professor of Public Policy at the UCLA Luskin School of Public Affairs. He received his Ph.D. in political science from UC San Diego. Steinert-Threlkeld’s wrok focuses on protest dynamics using natural language processing, computer vision, and large-scale simulations. He has studied protests around the world, including Arab Spring, protests in East Asia, and South America."
+  bio: "Zachary C. Steinert-Threlkeld is an assistant professor of Public Policy at the UCLA Luskin School of Public Affairs. He received his Ph.D. in political science from UC San Diego. Steinert-Threlkeld’s work focuses on protest dynamics using natural language processing, computer vision, and large-scale simulations. He has studied protests around the world, including Arab Spring, protests in East Asia, and South America."
   website: https://zacharyst.com/
