--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -17,7 +17,7 @@
 - date: 2022-06-21
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-10:30** Happy Hour
+    - name: "**09:15-10:30** Research Happy Hour
     <br/> 
     <br/> 
     Required Readings:
@@ -46,7 +46,7 @@
 - date: 2022-06-22
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-10:30** Happy Hour
+    - name: "**09:15-10:30** Research Happy Hour
     <br/> 
     <br/> 
     Required Readings:
@@ -72,7 +72,7 @@
 - date: 2022-06-23
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-10:30** Happy Hour
+    - name: "**09:15-10:30** Research Happy Hour
     <br/> 
     <br/> 
     Required Readings:
@@ -98,7 +98,7 @@
 - date: 2022-06-24
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements"
-    - name: "**09:15-10:30** Happy Hour
+    - name: "**09:15-10:30** Research Happy Hour
     <br/> 
     <br/> 
     Required Readings:
