--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -22,7 +22,7 @@
     <br/> 
     Required Readings:
     
-    - '<a href="https://www.pnas.org/doi/abs/10.1073/pnas.2119373119" target="_blank">North and South: Naming practices and the hidden dimension of global disparities in knowledge production</a>'
+    - <a href='https://www.pnas.org/doi/abs/10.1073/pnas.2119373119' target='_blank'>North and South: Naming practices and the hidden dimension of global disparities in knowledge production</a>
 
     - [The demography of the peripatetic researcher: Evidence on highly mobile scholars from the Web of Science](https://doi.org/10.48550/arXiv.1907.13414)
     
