sicss-cu-schedule

--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -23,14 +23,14 @@
     Required Readings:
     
     - <a href='https://www.pnas.org/doi/abs/10.1073/pnas.2119373119' target='_blank'>North and South: Naming practices and the hidden dimension of global disparities in knowledge production</a>
-
-    - [The demography of the peripatetic researcher: Evidence on highly mobile scholars from the Web of Science](https://doi.org/10.48550/arXiv.1907.13414)
     
-    - [Bibliometric analysis of global migration health research in peer-reviewed literature (2000–2016)](https://doi.org/10.1186/s12889-018-5689-x)
-
-    - [A bibliometric analysis of childhood immunization research productivity in Africa since the onset of the Expanded Program on Immunization in 1974](https://doi.org/10.1186/1741-7015-11-66)
+    - <a href='https://doi.org/10.48550/arXiv.1907.13414' target='_blank'>The demography of the peripatetic researcher: Evidence on highly mobile scholars from the Web of Science</a>
     
-    - [A bibliometric analysis of COVID-19 research in Africa](http://dx.doi.org/10.1136/bmjgh-2021-005690)"
+    - <a href='https://doi.org/10.1186/s12889-018-5689-x' target='_blank'>Bibliometric analysis of global migration health research in peer-reviewed literature (2000–2016)</a>
+    
+    - <a href='http://dx.doi.org/10.1136/bmjgh-2021-005690' target='_blank'>A bibliometric analysis of COVID-19 research in Africa</a>
+    
+    - <a href='https://doi.org/10.1186/1741-7015-11-66' target='_blank'>A bibliometric analysis of childhood immunization research productivity in Africa since the onset of the Expanded Program on Immunization in 1974</a>"
     
     - name: "**10:30-12:00** North and South: *Naming practices and the hidden dimension of global disparities in knowledge production.*
     <br/> 
@@ -39,7 +39,7 @@
     
     - name: "**12:00-13:00** Tutorials"
     - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Tutorial: [Quasi]-automated search strategy development and article screening in R with [litsearchr](https://doi.org/10.1111/2041-210X.13268) and [revtools](https://doi.org/10.1002/jrsm.1374)"
+    - name: "**14:00-15:30** Tutorial: [Quasi]-automated search strategy development and article screening in R with <a href='https://doi.org/10.1111/2041-210X.13268' target='_blank'>litsearchr</a> and <a href='https://doi.org/10.1002/jrsm.1374' target='_blank'>revtools</a>"
     - name: "**15:30-18:00** Group Exercises"
     - name: "**18:00-** Dinner"
 
@@ -51,11 +51,11 @@
     <br/> 
     Required Readings:
     
-    - [Can a 280-character message explain stock returns? Evidence from South Africa](https://doi.org/10.1108/MF-12-2021-0598)
-
-    - [Characterising Different Communities of Twitter Users: Migrants and Natives](https://doi.org/10.1007/978-3-030-93409-5_12)
+    - <a href='https://doi.org/10.1108/MF-12-2021-0598' target='_blank'>Can a 280-character message explain stock returns? Evidence from South Africa</a>
     
-    - [Systematic Delineation of Media Polarity on COVID-19 Vaccines in Africa: Computational Linguistic Modeling Study](https://doi.org/10.2196/22916)"
+    - <a href='https://doi.org/10.1007/978-3-030-93409-5_12' target='_blank'>Characterising Different Communities of Twitter Users: Migrants and Natives</a>
+
+    - <a href='https://doi.org/10.2196/22916' target='_blank'>Systematic Delineation of Media Polarity on COVID-19 Vaccines in Africa: Computational Linguistic Modeling Study</a>"
     
     - name: "**10:30-12:00** Can a 280-character message explain stock returns? *Evidence from South Africa.*
     <br/> 
@@ -77,15 +77,15 @@
     <br/> 
     Required Readings:
     
-    - [Using search queries to understand health information needs in Africa](https://ojs.aaai.org/index.php/ICWSM/article/view/3360)
+    - <a href='https://ojs.aaai.org/index.php/ICWSM/article/view/3360' target='_blank'>Using search queries to understand health information needs in Africa</a>
     
-    - [COVID-19 Misinformation Spread in Eight Countries: Exponential Growth Modeling Study](https://doi.org/10.2196/24425)
-
-    - [Searching for HIV and AIDS health information in South Africa, 2004-2019: Analysis of Google and Wikipedia search trends](https://doi.org/10.2196/29819)
-
-    - [Population-scale dietary interests during the COVID-19 pandemic](https://doi.org/10.1038/s41467-022-28498-z)
-
-    - [Google trends and water conservation awareness: the internet’s contribution in South Africa](https://doi.org/10.1080/03736245.2021.1901239)"
+    - <a href='https://doi.org/10.2196/24425' target='_blank'>COVID-19 Misinformation Spread in Eight Countries: Exponential Growth Modeling Study</a>
+    
+    - <a href='https://doi.org/10.2196/29819' target='_blank'>Searching for HIV and AIDS health information in South Africa, 2004-2019: Analysis of Google and Wikipedia search trends</a>
+    
+    - <a href='https://doi.org/10.1038/s41467-022-28498-z' target='_blank'>Population-scale dietary interests during the COVID-19 pandemic</a>
+    
+    - <a href='https://doi.org/10.1080/03736245.2021.1901239' target='_blank'>Google trends and water conservation awareness: the internet’s contribution in South Africa</a>"
     
     - name: "**10:30-12:00** Introduction to Internet Search Data."
     - name: "**12:00-13:00** Tutorials"
