update SICSS-CU schedule

--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -53,9 +53,9 @@
     
     - <a href='https://doi.org/10.1108/MF-12-2021-0598' target='_blank'>Can a 280-character message explain stock returns? Evidence from South Africa</a>
     
-    - <a href='https://doi.org/10.1007/978-3-030-93409-5_12' target='_blank'>Characterising Different Communities of Twitter Users: Migrants and Natives</a>
+    - <a href='https://doi.org/10.1007/978-3-030-93409-5_12' target='_blank'>Characterising different communities of Twitter users: Migrants and Natives</a>
 
-    - <a href='https://doi.org/10.2196/22916' target='_blank'>Systematic Delineation of Media Polarity on COVID-19 Vaccines in Africa: Computational Linguistic Modeling Study</a>"
+    - <a href='https://doi.org/10.2196/22916' target='_blank'>Systematic delineation of media polarity on COVID-19 vaccines in Africa: Computational Linguistic Modeling Study</a>"
     
     - name: "**10:30-12:00** Can a 280-character message explain stock returns? *Evidence from South Africa.*
     <br/> 
@@ -79,7 +79,7 @@
     
     - <a href='https://ojs.aaai.org/index.php/ICWSM/article/view/3360' target='_blank'>Using search queries to understand health information needs in Africa</a>
     
-    - <a href='https://doi.org/10.2196/24425' target='_blank'>COVID-19 Misinformation Spread in Eight Countries: Exponential Growth Modeling Study</a>
+    - <a href='https://doi.org/10.2196/24425' target='_blank'>COVID-19 misinformation sSpread in eight countries: Exponential growth modeling study</a>
     
     - <a href='https://doi.org/10.2196/29819' target='_blank'>Searching for HIV and AIDS health information in South Africa, 2004-2019: Analysis of Google and Wikipedia search trends</a>
     
@@ -103,15 +103,15 @@
     <br/> 
     Required Readings:
     
-    - [Characterizing low effort responding among young African adults recruited via Facebook advertising](https://doi.org/10.1371/journal.pone.0250303)
+    - <a href='https://doi.org/10.1371/journal.pone.0250303' target='_blank'>Characterizing low effort responding among young African adults recruited via Facebook advertising</a>
     
-    - [Evaluating sampling biases from third-party reporting as a method for improving survey measures of sensitive behaviors](https://www.sciencedirect.com/science/article/abs/pii/S0378873316300454)
+    - <a href='https://www.sciencedirect.com/science/article/abs/pii/S0378873316300454' target='_blank'>Evaluating sampling biases from third-party reporting as a method for improving survey measures of sensitive behaviors</a>
     
-    - [Using an Online Sample to Estimate the Size of an Offline Population](https://doi.org/10.1007/s13524-019-00840-z)
+    - <a href='https://doi.org/10.1007/s13524-019-00840-z' target='_blank'>Using an online sample to estimate the size of an offline population</a>
     
-    - [A scoping review on the use of machine learning in research on social determinants of health: Trends and research prospects](https://doi.org/10.1016/j.ssmph.2021.100836)
+    - <a href='https://doi.org/10.1016/j.ssmph.2021.100836' target='_blank'>A scoping review on the use of machine learning in research on social determinants of health: Trends and research prospects</a>
     
-    - [Predicting the vulnerability of women to intimate partner violence in South Africa: Evidence from tree-based machine learning techniques](https://journals.sagepub.com/doi/abs/10.1177/0886260520960110)"
+    - <a href='https://journals.sagepub.com/doi/abs/10.1177/0886260520960110' target='_blank'>Predicting the vulnerability of women to intimate partner violence in South Africa: Evidence from tree-based machine learning techniques</a>"
      
     - name: "**10:30-12:00** Social Survey meets Online Survey || Machine Learning."
     - name: "**12:00-13:00** Tutorials"
