Update location to virtual

--- a/_data/2022/howard-mathematica/location.yml
+++ b/_data/2022/howard-mathematica/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/howard.jpg
 title: Howard/Mathematica
-subtitle: Howard University
+subtitle: Virtual Event
 description: "June 18 to July 1, 2022"
 link: howard-mathematica
 year: 2022
