--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -71,7 +71,6 @@
           
     - name: "2:00 - 5:00 R Workshop (*Zoom*)" 
     - name: "5:00 - 5:15 Break"
-    - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary and Q&A: Speaker TBA (*Zoom*)"
 
   
 - date: 2022-06-20
@@ -90,11 +89,9 @@
         
         - Maxine Van Doren, Ph.D. student, Linguistics, UC San Diego
         
-        - Speaker TBA 
+        - Felix Owusu, Ph.D., Postdoctoral Research Fellow, Program in Criminal Justice Policy and Management, Harvard University
         
-        - Speaker TBA 
-        
-        - Speaker TBA'
+        - Janeria Easley, Ph.D., Assistant professor, Department of African American Studies, Emory University'
         
     - name: "1:00 - 1:30 Break"
     - name: "1:30 - 1:45 Introduction to the group exercise Lesson plan (participants); Lesson plan (instructors) (*Zoom*)"
