--- a/_data/2022/hong-kong/speakers.yml
+++ b/_data/2022/hong-kong/speakers.yml
@@ -34,6 +34,12 @@
   website: https://sites.google.com/view/kayuet-liu
   
 
+- name: Christopher Lucas
+  image: /assets/images/christopherlucas.png
+  bio: "Christopher Lucas is an Assistant Professor in the Department of Political Science and a faculty affiliate with the Division of Computational & Data Sciences at Washington University in St. Louis. He received her Ph.D. in Political Science from Harvard University. Lucas studies methodology, political communication, and the media. His research develops and applies computational models for the statistical analysis of speech audio."
+  website: https://sites.google.com/view/kayuet-liu
+
+
 - name: Zachary C. Steinert-Threlkeld
   image: /assets/images/Steinert-Threlkeld.jpeg
   bio: "Zachary Steinert-Threlkeld is an assistant professor of Public Policy at the UCLA Luskin School of Public Affairs. He received his Ph.D. in political science from UC San Diego. Steinert-Threlkeld’s work focuses on protest dynamics using natural language processing, computer vision, and large-scale simulations. He has studied protests around the world, including Arab Spring, protests in East Asia, and South America."
