Oxford - Add prelim schedule

--- a/_data/2022/oxford/schedule.yml
+++ b/_data/2022/oxford/schedule.yml
@@ -1,3 +1,50 @@
 - date: July 3, 2022
+  name: SICSS Oxford Welcome
   events:
-    - name: "Schedule coming soon..."
+    - name: "5:00pm - 7:00pm Welcome Pizza"
+    
+- date: July 4, 2022
+  name: Open Science
+  events:
+    - name: "tba"    
+    
+- date: July 5, 2022
+  name: Machine Learning
+  events:
+    - name: "tba"       
+
+- date: July 6, 2022
+  name: Geospatial Analysis and Visualisation
+  events:
+    - name: "tba" 
+
+- date: July 7, 2022
+  name: Non-Random Probability Sampling and Post-Stratification
+  events:
+    - name: "tba"  
+
+- date: July 8, 2022
+  name: Web Scraping and Text as Data
+  events:
+    - name: "tba"  
+
+- date: July 9, 2022
+  name: tba
+  events:
+    - name: "tba"    
+
+- date: July 11, 2022
+  name: Group Projects      
+  
+- date: July 12, 2022
+  name: Group Projects   
+
+- date: July 13, 2022
+  name: Group Projects   
+
+- date: July 14, 2022
+  name: Group Projects   
+
+- date: July 15, 2022
+  name: Group Projects     
+    
