--- a/_data/2022/hong-kong/speakers.yml
+++ b/_data/2022/hong-kong/speakers.yml
@@ -37,7 +37,7 @@
 - name: Christopher Lucas
   image: /assets/images/christopherlucas.png
   bio: "Christopher Lucas is an Assistant Professor in the Department of Political Science and a faculty affiliate with the Division of Computational & Data Sciences at Washington University in St. Louis. He received her Ph.D. in Political Science from Harvard University. Lucas studies methodology, political communication, and the media. His research develops and applies computational models for the statistical analysis of speech audio."
-  website: https://sites.google.com/view/kayuet-liu
+  website: http://christopherlucas.org/
 
 
 - name: Zachary C. Steinert-Threlkeld
